# positional-data-py

./: README.md  pyproject.toml
positional_data/: convert.awk  main.py
